--- a/frontend/src/css/base.css
+++ b/frontend/src/css/base.css
@@ -1,14 +1,22 @@
 html, body, #root {
-    height: 100%;
+    font-family: "trebuchet ms", sans-serif;
     width: 100%;
     margin: 0;
     padding: 0;
 }
+body {
+    min-width: 320px;
+}
+
 .App {
-    height: 100vh;
+    height: 100dvh;
     overflow-y: auto;
+
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    box-sizing: border-box;
 }
 
 p, span, label, h1, h2, h3, h4, h5, h6, div, button, input {
@@ -36,13 +44,12 @@ button:disabled, input:disabled {
 }
 
 
-
 .full_screen {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
 }
 
 .rounded_border {
@@ -52,8 +59,10 @@ button:disabled, input:disabled {
 
 .base_button {
     padding: 8px 16px;
+
     border: 1px solid var(--border-color);
     border-radius: 10px;
+
     background-color: var(--button-color);
     color: var(--text-color);
 }
@@ -81,6 +90,7 @@ button:disabled, input:disabled {
     align-items: center;
     gap: 5px;
     color: var(--text-color);
+    box-sizing: border-box;
 }
 
 .base_flex_column {
@@ -91,6 +101,7 @@ button:disabled, input:disabled {
     align-items: center;
     gap: 5px;
     color: var(--text-color);
+    box-sizing: border-box;
 }
 
 .base_icon {
