--- a/frontend/src/css/loading.css
+++ b/frontend/src/css/loading.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    width: 100vw;
+    height: 90dvh;
+    width: 90vw;
     background-color: var(--bg-color);
     opacity: 0.8;
     color: var(--text-color);
