--- a/frontend/src/css/custom_header.css
+++ b/frontend/src/css/custom_header.css
@@ -13,6 +13,8 @@
     border: 0 solid var(--header-color);
 
     cursor: pointer;
+
+    user-select: none;
 }
 .header_a_c {
     height: 100%;
@@ -28,6 +30,8 @@
     border: 0 solid var(--header-color);
 
     cursor: pointer;
+
+    user-select: none;
 }
 
 .header_a:hover, .header_a_c:hover {
